# learn-scraping

./: .gitignore  README.md  pyproject.toml
learn_scraping/: rumahcom-scrape.py
learn_scraping/rumahcom/: main.py
