[tool.poetry]
name = "learn-scraping"
version = "0.1.0"
description = ""
authors = ["Nashihun Amien <nashihun.amien@mekari.com>"]
readme = "README.md"
packages = [{include = "learn_scraping"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.11.2"
cloudscraper = "^1.2.71"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
